--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "^1.4.9",
     "angular-animate": "^1.4.9",
+    "angular-ui-bootstrap": "^2.3.0",
     "angular-ui-sortable": "^0.15.1",
     "bootstrap": "^3.3.7",
     "bootstrap-select": "^1.12.1",
