--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-select": "^1.12.1",
     "jquery": "^3.1.1",
     "jquery-ui-dist": "^1.12.1",
+    "materialize-css": "^0.98.0",
     "notie": "^3.9.4"
   },
   "devDependencies": {
