--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-decorator==4.0.10
+appnope==0.1.0
+decorator==4.0.4
 Django==1.8.7
+django-autocomplete-light==3.0.4
+django-guardian==1.4.6
 django-widget-tweaks==1.4.1
+gnureadline==6.3.3
 ipdb==0.8.1
-ipython==5.1.0
+ipython==4.0.1
 ipython-genutils==0.1.0
 mysqlclient==1.3.7
-pexpect==4.2.1
-pickleshare==0.7.4
-pkg-resources==0.0.0
-prompt-toolkit==1.0.9
-ptyprocess==0.5.1
-Pygments==2.1.3
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+ptyprocess==0.5
 simplegeneric==0.8.1
 six==1.10.0
-traitlets==4.3.1
-wcwidth==0.1.7
-django-guardian==1.4.6
+traitlets==4.1.0b1
+wheel==0.26.0
